--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mordcai-api",
+  "name": "jelt-api",
   "version": "1.0.0",
-  "description": "Backend for the Mordcai software",
+  "description": "Backend for the jelt software",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
