--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-      "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "jest --watch",
     "test:unit": "jest --testPathPattern=unit",
     "test:integration": "jest --testPathPattern=integration",
@@ -42,6 +42,8 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.3",
+    "marked": "^17.0.1",
+    "openai": "^6.10.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "pino": "^9.6.0",
