--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.3",
     "marked": "^17.0.1",
+    "nodemailer": "^7.0.12",
     "openai": "^6.10.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
